Initial creation of Patients Model

--- a/PersonalClinic/appsettings.json
+++ b/PersonalClinic/appsettings.json
@@ -1,8 +1,11 @@
-﻿{
+{
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "PersonalClinicContext": "Server=(localdb)\\mssqllocaldb;Database=PersonalClinicContext-aa097527-26b1-4ed2-a45a-be4512066062;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
